--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,24 @@
-version: '3.3'
+version: '3.8'
 services:
   db:
     image: postgres:13.0-alpine
     volumes:
       - postgres_db:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ../.env
+
+  backend:
+    build: .
+    restart: always
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - ../.env
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
 
   frontend:
     build:
@@ -13,8 +26,11 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - db
+
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     restart: always
     ports:
       - "80:80"
@@ -24,3 +40,10 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - backend
+
+volumes:
+  postgres_db:
+  static_value:
+  media_value:
