--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_tokens off;
+    server_name 127.0.0.1
 
     location /media/ {
         root /var/html;
@@ -14,11 +15,6 @@ server {
         root /var/html;
     }
 
-    location /api/ {
-        proxy_set_header Host $host;
-        proxy_pass http://backend:8000;
-    }
-
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
     }
@@ -27,6 +23,17 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+   location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+    location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -35,10 +42,10 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+    }
 
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /var/html/frontend/;
+    }
 }
