--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_tokens off;
-    server_name 127.0.0.1
+    server_name 127.0.0.1 51.250.17.23;
 
     location /media/ {
         root /var/html;
@@ -11,18 +11,19 @@ server {
         root /var/html;
     }
 
-    location /static/rest-framework/ {
+    location /static/colorfield/ {
         root /var/html;
     }
 
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+    location /static/rest_framework {
+        root /var/html/static/rest_framework;
     }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
    location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
