--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,23 @@ services:
     volumes:
       - postgres_db:/var/lib/postgresql/data/
     env_file:
-      - ../.env
+      - ./.env
 
   backend:
-    build: .
+    image: maximuz2004/foodgram_backend:latest
     restart: always
     ports:
       - "8000:8000"
     depends_on:
       - db
     env_file:
-      - ../.env
+      - ./.env
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: maximuz2004/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
@@ -37,7 +35,7 @@ services:
     volumes:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
     depends_on:
