--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -83,7 +83,10 @@ jobs:
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo DEBUG=${{ secrets.DEBUG }} >> .env
             echo HOST=${{ secrets.HOST }} >> .env
-            sudo docker-compose up -d --build
+            sudo docker-compose up -d
+            sudo docker-compose exec web python manage.py collectstatic
+            sudo docker-compose exec web python manage.py makemigrations
+            sudo docker-compose exec web python manage.py migrate
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
