--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -84,9 +84,10 @@ jobs:
             echo DEBUG=${{ secrets.DEBUG }} >> .env
             echo HOST=${{ secrets.HOST }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec web python manage.py collectstatic
-            sudo docker-compose exec web python manage.py makemigrations
-            sudo docker-compose exec web python manage.py migrate
+            sudo docker-compose exec backend python manage.py collectstatic
+            sudo docker-compose exec backend python manage.py makemigrations
+            sudo docker-compose exec backend python manage.py migrate
+            sudo docker-compose exec backend python manage.py collectstatic --no-input
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
