--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - postgres_db:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - ../.env
 
   backend:
     image: maximuz2004/foodgram_backend:latest
@@ -15,7 +15,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
+      - ../.env
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -37,9 +37,10 @@ services:
       - media_value:/var/html/media/
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./docs/:/usr/share/nginx/html/api/docs/
     depends_on:
       - backend
+      - frontend
 
 volumes:
   postgres_db:
