--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,26 +1,48 @@
-version: '3.3'
+version: '3.8'
 services:
   db:
     image: postgres:13.0-alpine
     volumes:
       - postgres_db:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ./.env
+
+  backend:
+    image: maximuz2004/foodgram_backend:latest
+    restart: always
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: maximuz2004/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - db
+
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.21.3-alpine
     restart: always
     ports:
       - "80:80"
     volumes:
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
+      - ./docs/:/usr/share/nginx/html/api/docs/
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  postgres_db:
+  static_value:
+  media_value:
